Fix scrollbar padding

--- a/src/Views/ManageBusinessCard/ManageBusinessCard.module.scss
+++ b/src/Views/ManageBusinessCard/ManageBusinessCard.module.scss
@@ -98,6 +98,11 @@
     .scrollableContainer {
       height: 100%;
 
+      .scrollable {
+        padding-right: 24px;
+        box-sizing: border-box;
+      }
+
       .businessCard {
         display: flex;
       }
